// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`billingPlanFeatures getPlanCardFeaturesForPrices should return the features for prices 1`] = `
[
  {
    "icon": <PlanFeatureMaterialIcon
      icon="playlist_add_check"
    />,
    "label": <BillableTicketsLabel
      currency="usd"
      extraTicketCost={0.54}
      freeTickets={2000}
    />,
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="thumb_up"
    />,
    "label": "Facebook, Messenger, Instagram",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="forum"
    />,
    "label": "Live chat",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="phone"
    />,
    "isDisabled": false,
    "label": <React.Fragment>
      <b>
        3
      </b>
       Phone number
      s
    </React.Fragment>,
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="auto_awesome"
    />,
    "label": "Macros and rules",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="insert_emoticon"
    />,
    "isDisabled": false,
    "label": "Satisfaction surveys",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="web_asset"
    />,
    "isDisabled": false,
    "label": <HelpCenterLabel
      disabled={false}
    />,
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="directions_bike"
    />,
    "label": <React.Fragment>
      <b>
        Lite
      </b>
       onboarding
    </React.Fragment>,
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="attach_money"
    />,
    "isDisabled": false,
    "label": "Revenue statistics",
  },
  {
    "icon": <PlanFeatureVectorIcon
      url="test-file-stub"
    />,
    "isDisabled": false,
    "label": "Magento integration",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="person_pin"
    />,
    "isDisabled": true,
    "label": "Dedicated success manager",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="blur_on"
    />,
    "isDisabled": true,
    "label": "Custom services",
  },
]
`;

exports[`billingPlanFeatures getPlanCardFeaturesForPrices should return the features for prices with hardcoded features 1`] = `
[
  {
    "icon": <PlanFeatureMaterialIcon
      icon="playlist_add_check"
    />,
    "label": <BillableTicketsLabel
      currency="usd"
      extraTicketCost={0.54}
      freeTickets={2000}
    />,
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="thumb_up"
    />,
    "label": "Facebook, Messenger, Instagram & DMs",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="forum"
    />,
    "label": "Live chat",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="phone"
    />,
    "isDisabled": false,
    "label": <React.Fragment>
      <b>
        3
      </b>
       Phone number
      s
    </React.Fragment>,
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="auto_awesome"
    />,
    "label": "Macros and rules",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="insert_emoticon"
    />,
    "isDisabled": false,
    "label": "Satisfaction surveys",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="web_asset"
    />,
    "isDisabled": false,
    "label": <HelpCenterLabel
      disabled={false}
    />,
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="directions_bike"
    />,
    "label": <React.Fragment>
      <b>
        Lite
      </b>
       onboarding
    </React.Fragment>,
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="attach_money"
    />,
    "isDisabled": false,
    "label": "Revenue statistics",
  },
  {
    "icon": <PlanFeatureVectorIcon
      url="test-file-stub"
    />,
    "isDisabled": false,
    "label": "Magento integration",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="person_pin"
    />,
    "isDisabled": true,
    "label": "Dedicated success manager",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="blur_on"
    />,
    "isDisabled": true,
    "label": "Custom services",
  },
]
`;
